RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/array_sum_0007/array_sum_merged.txt
/home/dimpling/AutoSpec/out/array_sum_0007/array_sum_merged.c:6:62: error: unterminated comment
    6 |     loop invariant sum == \sum(0, p-1, a); /* Sum of elements a[0] to a[p-1] */;
      |                                                              ^
